--- a/styles.css
+++ b/styles.css
@@ -1,31 +1,87 @@
-body{ 
-   background-position: center center;
-   background-repeat: no-repeat;
-   background-attachment: fixed;
-   background-size: cover;
-   background-color: #056676;
-   background-image: linear-gradient(180deg, #056676 21%, #5eaaa8 52%, #a3d2ca 82%, #ffffff 92%, #e8ded2 93%);
-   box-sizing: border-box;
-   margin: 0;
-   padding: 0;
-   height: 100%;
-   width: 100%;
- }
-  
-.globalwidth{
+body {
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  background-color: #056676;
+  background-image: linear-gradient(
+    180deg,
+    #056676 21%,
+    #5eaaa8 52%,
+    #a3d2ca 82%,
+    #ffffff 92%,
+    #e8ded2 93%
+  );
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+  font-family: "Raleway", sans-serif;
+}
+
+.globalwidth {
   width: 100%;
 }
-.header{
-
+.header {
+  display: flex;
+  justify-content: space-between;
   height: 80px;
 }
 
-.header img{
+.header__img {
   width: 100px;
-  margin-bottom: 100px;
   margin-top: 10px;
   margin-left: 10px;
 }
 
+.header__menu {
+  margin-right: 0px;
+  height: 120px;
+}
 
-  
+.header__menu ul {
+  display: none;
+  list-style: none;
+  padding: 0px 15px 0px 0px;
+  text-align: left;
+  margin: 0px 0px 0px -20px;
+}
+.header__menu:hover ul,
+ul:hover {
+  display: block;
+}
+.header__menu li {
+  margin: 10px 0px;
+}
+.header__menu li a {
+  color: white;
+  text-decoration: none;
+}
+
+.header__menu--profile img {
+  width: 85%;
+}
+
+.main {
+  height: 300px;
+}
+.main__title {
+  color: #ffffff;
+  font-size: 25px;
+}
+.input {
+  border: 2px solid white;
+  border-radius: 30px;
+  background-color: rgba(255, 255, 255, 0.1);
+  color: white;
+  font-family: "Raleway", sans-serif;
+  font-size: 16px;
+  height: 50px;
+  padding: 0px 20px;
+  width: 70%;
+  outline: none;
+}
+::placeholder {
+  color: #ffffff;
+}
